--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yorktel",
-  "version": "1.0.0",
+  "name": "NCD-S3B",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,7 @@
   "author": "Trey Felton",
   "license": "ISC",
   "dependencies": {
-    "beepbeep": "^1.2.2",
-    "ncd-red-pca9536": "^1.1.0",
+    "inquirer": "^6.2.0",
     "promise-queue": "^2.2.5",
     "serialport": "^6.2.0",
     "xml2js": "^0.4.19"
